# kraken-rs

./: .gitignore  Cargo.toml  README.md
.omp/tools/: kraken-qa.ts
src/: main.rs  settings.rs
src/app/: ai.rs  automation.rs  mod.rs  native_menu.rs  state.rs
src/git/: backend.rs  mod.rs  models.rs  runner.rs
src/gpu/: avatar.wgsl  frost.wgsl  mesh.wgsl  mod.rs  offscreen.rs  renderer.rs  rounded.wgsl  window.rs
src/graph/: avatars.rs  layout.rs  mod.rs
src/term/: grid.rs  mod.rs  pty.rs
src/ui/: action.rs  geometry.rs  icons.rs  menu.rs  mod.rs  scene.rs  text_field.rs  theme.rs  widgets.rs
src/views/: commit_detail.rs  diff.rs  graph.rs  mod.rs  overlays.rs  palette.rs  preferences.rs  shell.rs  terminal.rs  welcome.rs  wip.rs
