[package]
name = "kraken-native"
version = "0.1.0"
edition = "2024"
description = "A native, GPU-rendered Git desktop client"
license = "MIT"

[[bin]]
name = "kraken"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
anyhow = "1.0"
bytemuck = { version = "1.23", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
cosmic-text = { version = "0.19", features = ["shape-run-cache"] }
directories = "6.0"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
glyphon = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
md5 = "0.7"
muda = "0.19"
notify = "8.2"
pollster = "0.4"
portable-pty = "0.9"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
rfd = "0.15"
serde_json = "1.0"
similar = "2.7"
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
thiserror = "2.0"
toml = "0.9"
ureq = { version = "3.1", features = ["json"] }
vte = "0.15"
wgpu = "30.0"
winit = "0.30.12"

[dev-dependencies]
tempfile = "3.20"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
too_many_lines = "allow"
struct_excessive_bools = "allow"
